--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,7 @@ navbar:
   left:
     - text: "About"
       href: about.html
-    - text: "Resume"
+    - text: "CV"
       icon: fa-user-circle-o
       href: Resume.html
     - text: "Dashboard"
