--- a/_site.yml
+++ b/_site.yml
@@ -5,15 +5,14 @@ navbar:
   left:
     - text: "About"
       href: about.html
-    - text: "CV"
-      icon: fa-user-circle-o
-      href: CV.html
     - text: "Dashboard"
       icon: fa-bar-chart
       href: dashboard.html    
   right:
     - icon: fa-envelope fa-lg
       href: mailto:<yc384@columbia.edu>
+    - text: CV
+      href: CV.html
     - icon: fa-github fa-lg
       href: http://github.com/yingcarolinechen/
 
